Create and get API for device and UserActivity
