# docs/swagger.json
@@ -8,6 +8,63 @@
     },
     "host": "0.0.0.0:8080",
     "paths": {
+        "/device": {
+            "get": {
+                "description": "Get Device data from Db.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "device"
+                ],
+                "summary": "Get Device From ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "deviceid",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.deviceResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create Device data in Db.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "device"
+                ],
+                "summary": "Create Device",
+                "parameters": [
+                    {
+                        "description": "Create Device",
+                        "name": "device",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.createDeviceRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.deviceResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/employee": {
             "get": {
                 "description": "Get Employee data from Db.",
@@ -122,6 +179,66 @@
                 }
             }
         },
+        "/userActivity": {
+            "get": {
+                "description": "Get User Activity data from Db.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "userActivity"
+                ],
+                "summary": "Get User Activity From ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "userid",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/api.userActivityResponse"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create UserActivity data in Db.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "userActivity"
+                ],
+                "summary": "Create UserActivity",
+                "parameters": [
+                    {
+                        "description": "Create Device",
+                        "name": "device",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.createUserActivityRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.userActivityResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "Get User data from Db.",
@@ -181,6 +298,21 @@
         }
     },
     "definitions": {
+        "api.createDeviceRequest": {
+            "type": "object",
+            "required": [
+                "description"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "status": {
+                    "description": "Free,busy,not working",
+                    "type": "string"
+                }
+            }
+        },
         "api.createEmployeeRequest": {
             "type": "object",
             "required": [
@@ -224,6 +356,29 @@
                 }
             }
         },
+        "api.createUserActivityRequest": {
+            "type": "object",
+            "required": [
+                "deviceid",
+                "end",
+                "start",
+                "userid"
+            ],
+            "properties": {
+                "deviceid": {
+                    "type": "integer"
+                },
+                "end": {
+                    "type": "string"
+                },
+                "start": {
+                    "type": "string"
+                },
+                "userid": {
+                    "type": "integer"
+                }
+            }
+        },
         "api.createUserRequest": {
             "type": "object",
             "required": [
@@ -240,6 +395,21 @@
                     "minLength": 6
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.deviceResponse": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "description": "Free,busy,not working",
                     "type": "string"
                 }
             }
@@ -275,6 +445,26 @@
                 },
                 "zipcode": {
                     "type": "string"
+                }
+            }
+        },
+        "api.userActivityResponse": {
+            "type": "object",
+            "properties": {
+                "deviceid": {
+                    "type": "integer"
+                },
+                "end": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "start": {
+                    "type": "string"
+                },
+                "userid": {
+                    "type": "integer"
                 }
             }
         },
